--- a/클론코딩3/scss/layout.scss
+++ b/클론코딩3/scss/layout.scss
@@ -130,7 +130,7 @@ body.on {
         display: block;
         float: none;
         height: 100%;
-        padding: 0 90px;
+        // padding: 0 90px;
         text-align: center;
         & > li {
           display: inline-block;
