--- a/클론코딩3/scss/layout.scss
+++ b/클론코딩3/scss/layout.scss
@@ -169,6 +169,9 @@ body.on {
             margin: 0;
             padding-left: 270px;
             text-align: left;
+            &.second {
+              padding-left: 0;
+            }
             .gnb-title {
               position: absolute;
               top: 0;
@@ -206,6 +209,61 @@ body.on {
               min-height: 243px;
               width: 100%;
               text-align: left;
+              &.depth2-2 {
+                padding: 43px 0 0;
+                text-align: center;
+                li {
+                  display: inline-block;
+                  float: none;
+                  width: 150px;
+                  position: static;
+                  border-right: 1px solid #e9e9e9;
+                  text-align: center;
+                  &:nth-child(1) > a:before {background-position: 0 0};
+                  &:nth-child(2) > a:before {background-position: -84px 0};
+                  &:nth-child(3) > a:before {background-position: -168px 0};
+                  &:nth-child(4) > a:before {background-position: -252px 0};
+                  &:nth-child(5) > a:before {background-position: -340px 0};
+                  &:nth-child(6) > a:before {background-position: -424px 0};
+                  &:nth-child(7) > a:before {background-position: -508px 0};
+                  &:nth-child(8) > a:before {background-position: -592px 0};
+                  &:nth-child(1) > .a2:before {background-position: 0 0px};
+                  &:nth-child(2) > .a2:before {background-position: -84px 0px};
+                  &:nth-child(3) > .a2:before {background-position: -168px 0px};
+                  &:nth-child(4) > .a2:before {background-position: -252px 0px};
+                  &:nth-child(5) > .a2:before {background-position: -340px 0px};
+                  &:nth-child(6) > .a2:before {background-position: -424px 0px};
+                  .a2 {
+                    &:before {
+                      background: url("../img/gnb_ico_ir.png");
+                    }
+                  }
+                  a {
+                    display: block;
+                    position: relative;
+                    left: auto;
+                    top: auto;
+                    width: 100%;
+                    padding: 0;
+                    border-bottom: none;
+                    background: transparent;
+                    &:before {
+                      display: block;
+                      opacity: 1;
+                      position: static;
+                      width: 84px;
+                      height: 84px;
+                      margin: 0 auto 15px;
+                      border: 1px solid #e9e9e9;
+                      border-radius: 50%;
+                      background: url("../img/gnb_ico_ir2.png");
+                      top: 50%;
+                      right: -8px;
+                      content: '';
+                    }
+                  }
+                }
+              }
               li.n1_1 {
                 display: block;
                 float: left;
