--- a/클론코딩3/scss/layout.scss
+++ b/클론코딩3/scss/layout.scss
@@ -3,10 +3,15 @@ body {
   letter-spacing: -0.02em;
   // font-family: 'Noto Sans KR', sans-serif;
   font-family: 'Nanum Gothic', sans-serif;
+
 }
 
 header * {
   z-index: 1;
+}
+
+span {
+  line-height: 1.6;
 }
 
 body.on {
@@ -139,6 +144,10 @@ body.on {
           height: 100%;
           margin: 0;
           vertical-align: top;
+          &:hover > a > span {
+            color: $gnbHoverColor;
+            transition: .2s;
+          }
           & > a {
             position: relative;
             display: block;
@@ -238,6 +247,10 @@ body.on {
                     padding: 0;
                     border-bottom: none;
                     background: transparent;
+                    &:hover span {
+                      color: $gnbHoverColor;
+                      transition: .2s;
+                    }
                     &:before {
                       display: block;
                       opacity: 1;
@@ -275,7 +288,10 @@ body.on {
                   border-bottom: 1px solid #5d6779;
                   background: #414c62;
                   vertical-align: top;
-                  // transition:
+                  &:hover {
+                    background: $gnbHoverColor;
+                    transition: .2s;
+                  }
                   & > span {
                     display: inline-block;
                     color: #fff;
@@ -288,12 +304,17 @@ body.on {
                   float: right;
                   width: calc( 100% - 210px );
                   min-height: 56px;
-                  padding: 10px 0 10px 25px;
+                  padding: 10px 0 10px 10px;
                   border-bottom: 1px dashed #c4c6c8;
                   & > li {
                     display: inline-block;
                     position: relative;
                     margin: 3px 13px 3px 0;
+                    &:hover a span {
+                      color: $gnbHoverColor;
+                      text-decoration: underline;
+                      transition: .2s;
+                    }
                     & > a {
                       display: block;
                       position: relative;
