--- a/클론코딩3/scss/layout.scss
+++ b/클론코딩3/scss/layout.scss
@@ -172,6 +172,9 @@ body.on {
               opacity: 1;
               display: block;
             }
+            &.current span:before {
+              opacity: 1;
+            }
             & > span {
               display: inline-block;
               height: 100%;
@@ -180,6 +183,18 @@ body.on {
               font-weight: 700;
               color: #282828;
               vertical-align: middle;
+              &:before {
+                display: block;
+                opacity: 0;
+                position: absolute;
+                left: 50%;
+                bottom: 9px;
+                content: '';                
+                border-left: 6px solid transparent;
+                border-right: 6px solid transparent;
+                border-bottom: 6px solid $gnbHoverColor;
+                transition: .3s;
+              }
             }
           }
           .item {
