--- a/클론코딩3/css/style.css
+++ b/클론코딩3/css/style.css
@@ -379,6 +379,17 @@ body.on {
   line-height: 1.3;
 }
 
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .gnb-title > strong:after {
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: -24px;
+  content: '';
+  width: 36px;
+  height: 1px;
+  background: #282828;
+}
+
 #gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .gnb-title > p {
   display: inline-block;
   position: relative;
@@ -389,6 +400,7 @@ body.on {
   font-size: 14px;
   color: #767676;
   line-height: 1.4;
+  font-weight: 700;
 }
 
 #gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul {
@@ -502,6 +514,11 @@ body.on {
   background: transparent;
 }
 
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li a span {
+  font-weight: 700;
+  color: #767676;
+}
+
 #gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li a:hover span {
   color: #345aa0;
   transition: .2s;
@@ -530,6 +547,7 @@ body.on {
   padding: 0;
   text-align: left;
   min-height: 50px;
+  list-style: circle;
 }
 
 #gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul li.n1_1 > a {
@@ -579,6 +597,10 @@ body.on {
   transition: .2s;
 }
 
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul li.n1_1 .depth3-ul > li:hover a:before {
+  background: #345aa0;
+}
+
 #gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul li.n1_1 .depth3-ul > li > a {
   display: block;
   position: relative;
@@ -586,10 +608,22 @@ body.on {
   padding-left: 10px;
 }
 
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul li.n1_1 .depth3-ul > li > a:before {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 11px;
+  content: '';
+  width: 3px;
+  height: 3px;
+  background: #9f9fa0;
+}
+
 #gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul li.n1_1 .depth3-ul > li > a > span {
   display: inline-block;
   font-size: 15px;
   color: #7b7b7b;
+  font-weight: 700;
 }
 
 @keyframes dropdown {
