--- a/클론코딩3/scss/layout.scss
+++ b/클론코딩3/scss/layout.scss
@@ -189,7 +189,7 @@ body.on {
                 position: absolute;
                 left: 50%;
                 bottom: 9px;
-                content: '';                
+                content: '';
                 border-left: 6px solid transparent;
                 border-right: 6px solid transparent;
                 border-bottom: 6px solid $gnbHoverColor;
@@ -227,6 +227,16 @@ body.on {
                 color: #282828;
                 font-weight: 700;
                 line-height: 1.3;
+                &:after {
+                  display: block;
+                  position: absolute;
+                  left: 0;
+                  bottom: -24px;
+                  content: '';
+                  width: 36px;
+                  height: 1px;
+                  background: #282828;
+                }
               }
               & > p {
                 display: inline-block;
@@ -238,6 +248,7 @@ body.on {
                 font-size: 14px;
                 color: #767676;
                 line-height: 1.4;
+                font-weight: 700;
               }
             }
             .depth2-ul {
@@ -277,6 +288,10 @@ body.on {
                     padding: 0;
                     border-bottom: none;
                     background: transparent;
+                    span {
+                      font-weight: 700;
+                      color: #767676;
+                    }
                     &:hover span {
                       color: $gnbHoverColor;
                       transition: .2s;
@@ -306,6 +321,7 @@ body.on {
                 padding: 0;
                 text-align: left;
                 min-height: 50px;
+                list-style: circle;
                 & > a {
                   display: block;
                   position: absolute;
@@ -345,15 +361,29 @@ body.on {
                       text-decoration: underline;
                       transition: .2s;
                     }
+                    &:hover a:before {
+                      background: $gnbHoverColor;
+                    }
                     & > a {
                       display: block;
                       position: relative;
                       width: 100%;
                       padding-left: 10px;
+                      &:before {
+                        display: block;
+                        position: absolute;
+                        left: 0;
+                        top: 11px;
+                        content: '';
+                        width: 3px;
+                        height: 3px;
+                        background: #9f9fa0;
+                      }
                       & > span {
                         display: inline-block;
                         font-size: 15px;
                         color: #7b7b7b;
+                        font-weight: 700;
                       }
                     }
                   }
