main영역 컨텐츠일부추가
main

--- a/클론코딩3/scss/layout.scss
+++ b/클론코딩3/scss/layout.scss
@@ -286,6 +286,10 @@ body.on {
                       color: $gnbHoverColor;
                       transition: .2s;
                     }
+                    &:hover:before {
+                      border: 1px solid $gnbHoverColor;
+                      border-radius: 50%;
+                    }
                     &:before {
                       display: block;
                       opacity: 1;
