--- a/클론코딩3/scss/main.scss
+++ b/클론코딩3/scss/main.scss
@@ -13,6 +13,70 @@
       padding: 25px 0;
       margin-bottom: 45px;
       background: #eff3f6;
+      .layout {
+        .weather-box {
+          position: relative;
+          display: inline-block;
+          vertical-align: middle;
+          z-index: 10;
+          .title-box {
+            display: inline-block;
+            vertical-align: middle;
+            width: 120px;
+            height: 120px;
+            padding: 20px 0;
+            margin-right: 20px;
+            border: 1px solid #e0e0e0;
+            background: #fff;
+            text-align: center;
+            .title {
+              display: block;
+              margin: 0 auto 10px;
+              width: 93px;
+              height: 57px;
+              a {
+                font-size: 0;
+                display: block;
+                width: 100%;
+                height: 100%;
+                background: url("../img/taegeukgi.png");
+              }
+            }
+            .date {
+              display: inline-block;
+              vertical-align: middle;
+              font-size: 13px;
+              color: #828282;
+            }
+          }
+          .data-box {
+            display: inline-block;
+            vertical-align: middle;
+            .dust-box {
+              strong {
+                display: inline-block;
+                vertical-align: middle;
+                margin-right: 3px;
+                font-size: 14px;
+                color: #282828;
+              }
+              .dust {
+                display: inline-block;
+                vertical-align: middle;
+                margin-right: 3px;
+                font-size: 14px;
+                color: #282828;
+                font-weight: 600;
+              }
+              .status.em1 {
+                color: #0d75b4;
+                font-size: 14px;
+                font-weight: 600;
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
