--- a/클론코딩3/css/main.css
+++ b/클론코딩3/css/main.css
@@ -154,3 +154,49 @@
   font-weight: 600;
   line-height: 1;
 }
+
+#body-layout .main-wrap .common-info-box .layout .search-box {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  z-index: 9;
+  width: 100%;
+  padding: 0 400px;
+  transform: translateY(-50%);
+}
+
+#body-layout .main-wrap .common-info-box .layout .search-box .align-box {
+  position: relative;
+}
+
+#body-layout .main-wrap .common-info-box .layout .search-box .align-box input {
+  width: calc(100% - 44px);
+  height: 59px;
+  padding: 0 45px 0 25px;
+  border: 1px solid #e8e8e8;
+  border-radius: 29.5px;
+  background: #fff;
+  font-size: 16px;
+}
+
+#body-layout .main-wrap .common-info-box .layout .search-box .align-box fieldset {
+  margin: 0;
+  padding: 0;
+}
+
+#body-layout .main-wrap .common-info-box .layout .search-box .align-box fieldset legend {
+  overflow: hidden;
+  position: relative;
+  width: 0;
+  height: 0;
+  margin: 0;
+  padding: 0;
+  line-height: 0;
+}
+
+#body-layout .main-wrap .common-info-box .layout .search-box .align-box fieldset legend .skip {
+  top: 0;
+  position: absolute;
+  height: 0;
+  font-size: 0;
+}
