--- a/클론코딩3/css/mixin.css
+++ b/클론코딩3/css/mixin.css
@@ -19,6 +19,14 @@ body {
   margin: 0 auto;
 }
 
+.layout-relative {
+  max-width: 1240px;
+  margin: 0 auto;
+  position: relative;
+  width: 100%;
+  text-align: left;
+}
+
 .container-fluid {
   background: green;
 }
