--- a/클론코딩3/scss/style.scss
+++ b/클론코딩3/scss/style.scss
@@ -11,7 +11,7 @@
 @import "common.scss"; // 공통요소
 @import "component.scss"; // 공통 컴포넌트
 @import "layout.scss"; // 공통 레이아웃
-
+@import "swiper_customize.scss"; // 스와이퍼 커스터마이징
 
 
 // 페이지 분화
