--- a/클론코딩3/scss/main.scss
+++ b/클론코딩3/scss/main.scss
@@ -234,6 +234,18 @@
     position: relative;
     height: 24px;
     width: 100%;
+    .swiper-wrapper {
+      .slide-inner-box {
+        padding: 0 2px;
+        position: relative;
+        a {
+          font-size: 15px;
+          &:hover {
+            border-bottom: 1px solid black;
+          }
+        }
+      }
+    }
   }
   .swiper-button-wrap1 {
     position: absolute;
