--- a/클론코딩3/scss/main.scss
+++ b/클론코딩3/scss/main.scss
@@ -235,6 +235,7 @@
     height: 24px;
     width: 100%;
     .swiper-wrapper {
+      width: 100%;
       .slide-inner-box {
         padding: 0 2px;
         position: relative;
